--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -36,36 +36,74 @@
       .main__contentsBlock--btn
       .main__contentsBlock__upper
         .main__contentsBlock__upper--when
-          1992年
+          2008年
         .main__contentsBlock__upper--what
-          大阪府大阪市西成区に生まれる。
+          地元の高校へ進学
       .main__contentsBlock__lower
         .main__contentsBlock__lower__left
         .main__contentsBlock__lower__right
           .main__contentsBlock__lower__right--text
-            小児ぜんそくを持って生まれ、こどもの頃は体が弱かったのですが
-            %br ディープな街西成で、元気に,平和に育ちました。
-            aaaaaaaaaaaaaaaaaaaaaaaa
-            %br aaaaaaaaaaaaaaaaaaaaaaaa
-            aaaaaaaaaaaaaaaaaaaaaaaa
-            %br aaaaaaaaaaaaaaaaaaaaaaaa
+            小学校、中学校、高校と、地元を離れることはなく、
+            %br どこへいくにも自転車での移動。
+            家から高校までは自転車で、7分36秒。
+            %br 朝が苦手で、ギリギリまで寝ているために
+            実際に測定しました。でも、よく遅刻しました。
           .main__contentsBlock__lower__right--photo
     -# contents3------------------------------------------------
     .main__contentsBlock
       .main__contentsBlock--btn
       .main__contentsBlock__upper
         .main__contentsBlock__upper--when
-          1992年
+          2011年
         .main__contentsBlock__upper--what
-          大阪府大阪市西成区に生まれる。
+          浪人生としての一年
       .main__contentsBlock__lower
         .main__contentsBlock__lower__left
         .main__contentsBlock__lower__right
           .main__contentsBlock__lower__right--text
-            小児ぜんそくを持って生まれ、こどもの頃は体が弱かったのですが
-            %br ディープな街西成で、元気に,平和に育ちました。
-            aaaaaaaaaaaaaaaaaaaaaaaa
-            %br aaaaaaaaaaaaaaaaaaaaaaaa
-            aaaaaaaaaaaaaaaaaaaaaaaa
-            %br aaaaaaaaaaaaaaaaaaaaaaaa
+            1浪し、同志社大学に進学しました。
+            %br ボランティアで不登校の子供達に勉強を教えていた浪人時代。
+            今の私の価値観を作り上げた1年でした。
+            %br 人と深く関わることが苦手だった私が、
+            一人一人と深く関わり、一人一人に真摯に向き合う。
+            %br ということに大きな価値を感じるようになりました。
+          .main__contentsBlock__lower__right--photo
+    -# contents4------------------------------------------------
+    .main__contentsBlock
+      .main__contentsBlock--btn
+      .main__contentsBlock__upper
+        .main__contentsBlock__upper--when
+          2013年
+        .main__contentsBlock__upper--what
+          スターバックスコーヒーでのアルバイト
+      .main__contentsBlock__lower
+        .main__contentsBlock__lower__left
+        .main__contentsBlock__lower__right
+          .main__contentsBlock__lower__right--text
+            モテたい。
+            %br そんな不純な動機で働き始めた、スターバックス。
+            ここでは一生寄り添っていきたい趣味と出会うことができました。
+            %br コーヒーです。黒い苦い液体。
+            こんなものでさえ、理解しきれない程の奥深さがあることを知り、
+            %br 一つのものを突き詰めていく喜びの第一歩を
+            スターバックスは与えてくれました。モテませんでした。
+          .main__contentsBlock__lower__right--photo
+    -# contents4------------------------------------------------
+    .main__contentsBlock
+      .main__contentsBlock--btn
+      .main__contentsBlock__upper
+        .main__contentsBlock__upper--when
+          2014年
+        .main__contentsBlock__upper--what
+          世界一のバリスタの元でのアルバイト
+      .main__contentsBlock__lower
+        .main__contentsBlock__lower__left
+        .main__contentsBlock__lower__right
+          .main__contentsBlock__lower__right--text
+            ラテアートの世界にも興味が湧いた私は、
+            %br 世界大会で優勝したバリスタの元でラテアートを学びました。
+            ラテアートはなくても良い無駄なものです。誰も困りません。
+            %br 口をつければ崩れてしまう。その一瞬のためだけに、
+            些細なこだわりをいくつも詰め込み、より良いものを目指す。
+            %br こだわりを持って、取り組み続けることの楽しさを知りました。
           .main__contentsBlock__lower__right--photo
