--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,6 +1,4 @@
 #backColor
-  .upper
-  .lower
 #plofile
   -# top================================================
   .top
@@ -48,7 +46,6 @@
             家から高校までは自転車で、7分36秒。
             %br 朝が苦手で、ギリギリまで寝ているために
             実際に測定しました。でも、よく遅刻しました。
-          .main__contentsBlock__lower__right--photo
     -# contents3------------------------------------------------
     .main__contentsBlock
       .main__contentsBlock--btn
@@ -107,3 +104,20 @@
             些細なこだわりをいくつも詰め込み、より良いものを目指す。
             %br こだわりを持って、取り組み続けることの楽しさを知りました。
           .main__contentsBlock__lower__right--photo
+    -# contents5------------------------------------------------
+    .main__contentsBlock
+      .main__contentsBlock--btn
+      .main__contentsBlock__upper
+        .main__contentsBlock__upper--when
+          2020年
+        .main__contentsBlock__upper--what
+          プログラミングの世界へ
+      .main__contentsBlock__lower
+        .main__contentsBlock__lower__left
+        .main__contentsBlock__lower__right
+          .main__contentsBlock__lower__right--text
+            それが、オカヤマカナタという人間です。
+            %br 一人との関わりを大切にし、
+            一つのものをつきつめ、
+            %br 一瞬のためにこだわりを持ち続ける。
+            これからは、そんなエンジニアとして成長していきます。
