--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -64,8 +64,8 @@
         .skills__box__content
           .skills__box__content--name
             javascript
-          .skills__box__content--text
-            
+          .skills__box__content--tex
+
         .skills__box__content
           .skills__box__content--name
             ruby
@@ -79,4 +79,36 @@
     -# works================================================
     .works
       .works__hedding
-        works
+        Works
+      .works__contentsBox
+        .works__contentsBox__textBlock
+          .works__contentsBox__textBlock--contentHedding
+            フリーマーケットアプリ
+          .works__contentsBox__textBlock--contentCategory
+            Rails, jquery, html, css
+          .works__contentsBox__textBlock--contentText
+            あああああああああああああああああああああああああああああああああああああああああああああ
+      -# .works__contentsBox
+      -#   .works__contentsBox__textBlock
+      -#     .works__contentsBox__textBlock--contentHedding
+      -#       フリーマーケットアプリ
+      -#     .works__contentsBox__textBlock--contentCategory
+      -#       Rails, jquery, html, css
+      -#     .works__contentsBox__textBlock--contentText
+      -# .works__contentsBox
+      -#   .works__contentsBox__textBlock
+      -#     .works__contentsBox__textBlock--contentHedding
+      -#       フリーマーケットアプリ
+      -#     .works__contentsBox__textBlock--contentCategory
+      -#       Rails, jquery, html, css
+      -#     .works__contentsBox__textBlock--contentText
+      -# .works__contentsBox
+      -#   .works__contentsBox__textBlock
+      -#     .works__contentsBox__textBlock--contentHedding
+      -#       フリーマーケットアプリ
+      -#     .works__contentsBox__textBlock--contentCategory
+      -#       Rails, jquery, html, css
+      -#     .works__contentsBox__textBlock--contentText
+
+
+
