--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -105,10 +105,48 @@
   padding-top: 8vh;
   width: 100%;
   height: 100vh;
-  background-color:rgb(138, 214, 157);
+  // background-color:rgb(138, 214, 157);
   &__hedding{
     width: 100%;
     font-size: 3vh;
+  }
+  &__contentsBox{
+    margin: 3vh auto 10vh;
+    width: 80%;
+    height: 60vh;
+    background-color: green;
+    position: relative;
+    &__textBlock{
+      position: absolute;
+        top: 10%;
+        right: 5%;
+      // background-color: red;
+      width: 35%;
+      height: 80%;
+      &--contentHedding{
+        // background-color: pink;
+        width: 100%;
+        height: 8vh;
+        line-height: 8vh;
+        font-size: 3vh;
+      }
+      &--contentCategory{
+        // background-color: brown;
+        width: 100%;
+        height: 4vh;
+        line-height: 4vh;
+        padding-left: 2vw;
+      }
+      &--contentText{
+        // background-color: blue;
+        padding: 3vh 0 0 2vh;
+        width: 100%;
+        height: 70%;
+        font-size: 2vh;
+        line-height: 4vh;
+        word-break: break-all;
+      }
+    }
   }
 }
 // ================================================
