--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -80,35 +80,12 @@
     .works
       .works__hedding
         Works
-      .works__contentsBox
-        .works__contentsBox__textBlock
-          .works__contentsBox__textBlock--contentHedding
-            フリーマーケットアプリ
-          .works__contentsBox__textBlock--contentCategory
-            Rails, jquery, html, css
-          .works__contentsBox__textBlock--contentText
-            あああああああああああああああああああああああああああああああああああああああああああああ
-      -# .works__contentsBox
-      -#   .works__contentsBox__textBlock
-      -#     .works__contentsBox__textBlock--contentHedding
-      -#       フリーマーケットアプリ
-      -#     .works__contentsBox__textBlock--contentCategory
-      -#       Rails, jquery, html, css
-      -#     .works__contentsBox__textBlock--contentText
-      -# .works__contentsBox
-      -#   .works__contentsBox__textBlock
-      -#     .works__contentsBox__textBlock--contentHedding
-      -#       フリーマーケットアプリ
-      -#     .works__contentsBox__textBlock--contentCategory
-      -#       Rails, jquery, html, css
-      -#     .works__contentsBox__textBlock--contentText
-      -# .works__contentsBox
-      -#   .works__contentsBox__textBlock
-      -#     .works__contentsBox__textBlock--contentHedding
-      -#       フリーマーケットアプリ
-      -#     .works__contentsBox__textBlock--contentCategory
-      -#       Rails, jquery, html, css
-      -#     .works__contentsBox__textBlock--contentText
-
-
-
+      =link_to("#")do
+        .works__contentsBox
+          .works__contentsBox__textBlock
+            .works__contentsBox__textBlock--contentHedding
+              フリーマーケットアプリ
+            .works__contentsBox__textBlock--contentCategory
+              Rails, jquery, html, css
+            .works__contentsBox__textBlock--contentText
+              あああああああああああああああああああああああああああああああああああああああああああああ
