--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -115,7 +115,11 @@
     width: 80%;
     height: 60vh;
     background-color: green;
+    filter: grayscale(100%);
     position: relative;
+    &:hover{
+      filter:grayscale(0)
+    }
     &__textBlock{
       position: absolute;
         top: 10%;
