--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "config/fonts";
 // ================================================
 @import "modules/contents/index";
+@import "modules/contents/show";
 @import "modules/profiles/index";
 // ================================================
 @import "font-awesome-sprockets";
