--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -80,7 +80,7 @@
     .works
       .works__hedding
         Works
-      =link_to("#")do
+      =link_to(content_path(1))do
         .works__contentsBox
           .works__contentsBox__textBlock
             .works__contentsBox__textBlock--contentHedding
