--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -1,1 +1,54 @@
-show
+#scroll
+  #show
+    -# top================================================ 
+    .top
+      .top--appName
+        = @content.name
+    -# main================================================
+    .main
+      .main__heading
+        .main__heading--left
+          = @content.name
+        .main__heading--right
+          show App
+      .main__text
+        ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+      .main__contentsWrapper
+        .main__contentsWrapper__content
+          .main__contentsWrapper__content--imageHeading
+            ログイン画面
+          .main__contentsWrapper__content--image
+          .main__contentsWrapper__content--textHeading
+            ウィザード形式での新規登録
+          .main__contentsWrapper__content--text
+            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+        .main__contentsWrapper__content
+          .main__contentsWrapper__content--imageHeading
+            ログイン画面
+          .main__contentsWrapper__content--image
+          .main__contentsWrapper__content--textHeading
+            ウィザード形式での新規登録
+          .main__contentsWrapper__content--text
+            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+        .main__contentsWrapper__content
+          .main__contentsWrapper__content--imageHeading
+            ログイン画面
+          .main__contentsWrapper__content--image
+          .main__contentsWrapper__content--textHeading
+            ウィザード形式での新規登録
+          .main__contentsWrapper__content--text
+            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+        .main__contentsWrapper__content
+          .main__contentsWrapper__content--imageHeading
+            ログイン画面
+          .main__contentsWrapper__content--image
+          .main__contentsWrapper__content--textHeading
+            ウィザード形式での新規登録
+          .main__contentsWrapper__content--text
+            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+
+
+
+
+
+
