--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "modules/contents/index";
 @import "modules/contents/show";
 @import "modules/profiles/index";
+@import "modules/templates/footer";
 // ================================================
 @import "font-awesome-sprockets";
 @import "font-awesome";
