--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -89,3 +89,5 @@
               Rails, jquery, html, css
             .works__contentsBox__textBlock--contentText
               あああああああああああああああああああああああああああああああああああああああああああああ
+  -# footer================================================
+  = render "/templates/footer"
