--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -46,7 +46,8 @@
             ウィザード形式での新規登録
           .main__contentsWrapper__content--text
             ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
-
+  -# footer================================================
+  = render "/templates/footer"
 
 
 
