--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -121,3 +121,5 @@
             一つのものをつきつめ、
             %br 一瞬のためにこだわりを持ち続ける。
             これからは、そんなエンジニアとして成長していきます。
+-# footer================================================
+= render "/templates/footer"
