--- a/app/views/templates/_footer.html.haml
+++ b/app/views/templates/_footer.html.haml
@@ -9,6 +9,5 @@
         Works
   - else
     .footerLinks
-      .footerLinks--back
-        Back
+      =link_to("Back",root_path,class:"footerLinks--back")
 
