--- a/app/assets/stylesheets/modules/profiles/_index.scss
+++ b/app/assets/stylesheets/modules/profiles/_index.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 15vw;
   width: 70vw;
-  height: 30vh;
+  height: 33vh;
   background-color: $l_gray;
 
 }
@@ -15,6 +15,7 @@
 
 // top================================================
 .top{
+  scroll-snap-align: center;
   width: 100%;
   height: 100vh;
   position: relative;
@@ -40,6 +41,7 @@
     }
   }
   &__contentsBlock{
+    scroll-snap-align: center;
     width: 100%;
     line-height: 4vh;
     font-size: 2vh;
@@ -94,7 +96,7 @@
           width: 50%;
           line-height: 4vh;
           font-size: 2vh;
-          padding: 2vh 0 10vh 5vh;
+          padding: 2vh 0 8.5vh 5vh;
         }
         &--photo{
           background-color: blue;
