--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "modules/contents/show";
 @import "modules/profiles/index";
 @import "modules/templates/footer";
+@import "modules/templates/header";
 // ================================================
 @import "font-awesome-sprockets";
 @import "font-awesome";
