--- a/app/assets/stylesheets/modules/templates/_header.scss
+++ b/app/assets/stylesheets/modules/templates/_header.scss
@@ -1,10 +1,19 @@
 #header{
-  background-color: rgba(226, 225, 225, 0);
-  width: 100vw;
-  height: 8vh;
-  line-height: 8vh;
-  padding: 0 3vw;
+  position: fixed;
+    top: 1vw;
+    right: 2vw;
+    z-index: 100;
+  font-size: 3em;
+  -webkit-text-stroke: 0.1em white;
+}
+.links{
   position: fixed;
     top: 0;
     z-index: 100;
+  width: 100%;
+  height: 5vh;
+  display: flex;
+  a{
+    margin-left: 2vw;
+  }
 }
