--- a/app/views/templates/_header.html.haml
+++ b/app/views/templates/_header.html.haml
@@ -1,3 +1,9 @@
 #header
-  .headerName
-    オカヤマ カナタ
+  = fa_icon "bars"
+.links
+  =link_to("カテゴリ登録","#")
+  =link_to("カテゴリ編集","#")
+  =link_to("アプリ登録","#")
+  =link_to("アプリ編集","#")
+  =link_to("ユーザー登録","#")
+  =link_to("ユーザー編集","#")
