--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -131,15 +131,23 @@
         line-height: 8vh;
         font-size: 3vh;
       }
-      &--contentCategory{
-        background-color: #fff;
+      &__categoryWrapper{
         width: 100%;
         height: 4vh;
         line-height: 4vh;
         padding-left: 2vw;
+        display: flex;
+        justify-content: start;
+        &--category{
+          border-radius: 5px;
+          margin-right: 3%;
+          text-align: center;
+          width: 20%;
+          height: 100%;
+        }
       }
       &--contentText{
-        padding: 3vh 0 0 2vh;
+        padding: 2vh 0 0 2vh;
         width: 100%;
         height: 70%;
         font-size: 2vh;
