--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -2,8 +2,10 @@
   .works__contentsBox
     .works__contentsBox__textBlock
       .works__contentsBox__textBlock--contentHedding
-        =content.name
-      .works__contentsBox__textBlock--contentCategory
-        
+        = content.name
+      .works__contentsBox__textBlock__categoryWrapper
+        - content.categories.each do |category|
+          .works__contentsBox__textBlock__categoryWrapper--category{style:"background-color:#{category.color}"}
+            = category.name
       .works__contentsBox__textBlock--contentText
-        =content.text
+        = content.text
