--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -11,7 +11,7 @@
         .main__heading--left
           = @content.name
         .main__heading--right
-          = link_to("show App",@content.link)
+          = link_to("Link",@content.link)
       .main__text
         = @content.text
       .main__contentsWrapper
