--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,10 @@
 // ================================================
 @import "modules/contents/index";
 @import "modules/contents/show";
+@import "modules/contents/new";
+
 @import "modules/profiles/index";
+
 @import "modules/templates/footer";
 @import "modules/templates/header";
 // ================================================
