--- a/app/views/templates/_header.html.haml
+++ b/app/views/templates/_header.html.haml
@@ -3,7 +3,7 @@
 .links
   =link_to("カテゴリ登録","#")
   =link_to("カテゴリ編集","#")
-  =link_to("アプリ登録","#")
+  =link_to("アプリ登録",new_content_path)
   =link_to("アプリ編集","#")
   =link_to("ユーザー登録","#")
   =link_to("ユーザー編集","#")
