--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -24,6 +24,7 @@
   scroll-snap-align: start;
   padding-top: 8vh;
   width: 100%;
+  // background-color: red;
   // hedding------------------------------------------------
   &__hedding{
     width: 100%;
@@ -104,7 +105,6 @@
   scroll-snap-align: start;
   padding-top: 8vh;
   width: 100%;
-  height: 100vh;
   &__hedding{
     width: 100%;
     font-size: 3vh;
