create view files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,9 +7,11 @@
 @import "modules/contents/index";
 @import "modules/contents/show";
 @import "modules/contents/new";
-
+// ------------------------------------------------
+@import "modules/categories/new";
+// ------------------------------------------------
 @import "modules/profiles/index";
-
+// ------------------------------------------------
 @import "modules/templates/footer";
 @import "modules/templates/header";
 // ================================================
