--- a/app/views/templates/_header.html.haml
+++ b/app/views/templates/_header.html.haml
@@ -1,7 +1,7 @@
 #header
   = fa_icon "bars"
 .links
-  =link_to("カテゴリ登録","#")
+  =link_to("カテゴリ登録",new_category_path)
   =link_to("カテゴリ編集","#")
   =link_to("アプリ登録",new_content_path)
   =link_to("アプリ編集","#")
