--- a/app/views/categories/new.html.haml
+++ b/app/views/categories/new.html.haml
@@ -1,4 +1,4 @@
 = form_with model: @category, local: true do |f|
-  = f.text_field name
-  = f.text_field color
+  = f.text_field :name
+  = f.text_field :color
   = f.submit
