--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -1,5 +1,6 @@
 =link_to(content_path(content.id))do
   .works__contentsBox
+    =image_tag content.image.to_s,class:"works__contentsBox__photoBlock"
     .works__contentsBox__textBlock
       .works__contentsBox__textBlock--contentHedding
         = content.name
