--- a/app/views/categories/new.html.haml
+++ b/app/views/categories/new.html.haml
@@ -1,4 +1,15 @@
-= form_with model: @category, local: true do |f|
-  = f.text_field :name
-  = f.text_field :color
-  = f.submit
+.form
+  = form_with model: @category, local: true do |f|
+    .form__box
+      .form__box--heading
+        カテゴリ名
+      .form__box--value
+        = f.text_field :name
+    .form__box
+      .form__box--heading
+        アイコンカラー
+      .form__box--value
+        = f.color_field :color
+    .form__submit
+      = f.submit
+
