--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -6,7 +6,7 @@
         = content.name
       .works__contentsBox__textBlock__categoryWrapper
         - content.categories.each do |category|
-          .works__contentsBox__textBlock__categoryWrapper--category{style:"background-color:#{category.color}"}
+          .works__contentsBox__textBlock__categoryWrapper--category{style:"background-color:#{category.color.insert(-1,"80")}"}
             = category.name
       .works__contentsBox__textBlock--contentText
         = content.text
