--- a/app/views/contents/_infomation.html.haml
+++ b/app/views/contents/_infomation.html.haml
@@ -1,6 +1,5 @@
 .main__contentsWrapper__content
-  .main__contentsWrapper__content--image
-    = info.image
+  = image_tag( info.image.to_s ,class:"main__contentsWrapper__content--image")
   .main__contentsWrapper__content--textHeading
     = info.heading
   .main__contentsWrapper__content--text
