--- a/app/views/contents/new.html.haml
+++ b/app/views/contents/new.html.haml
@@ -12,7 +12,9 @@
     = f.label "カテゴリー"
     = f.collection_check_boxes :category_ids, Category.all, :id, :name
   .sub
-    
-
+    = f.fields_for :infomations do |i|
+      = i.file_field :image
+      = i.text_area :text
+      = i.text_field :heading
   .submit
     = f.submit
