change file name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@
 // ================================================
 @import "modules/contents/index";
 @import "modules/contents/show";
-@import "modules/contents/new";
+@import "modules/contents/form";
 // ------------------------------------------------
 @import "modules/categories/new";
 // ------------------------------------------------
