--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -2,6 +2,7 @@
   width: 80vw;
   padding-top: 2vh;
   margin: 0 auto;
+// ================================================
   .top{
     background-color: $l_gray;
     height: 37vh;
@@ -34,31 +35,40 @@
     background-color: $l_gray;
     margin: 1vh 0;
   }
-  .infomation{
-    padding-top:1vh;
-    height: 50vh;
-    background-color: $l_gray;
+.infomation{
+  padding:2vh 0;
+  width: 100%;
+  height: 50vh;
+  background-color: $l_gray;
+  margin-bottom: 2vh;
+  &__previewBox{
+    width: 100%;
+    height: 40%;
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 2vh;
-    &__box{
-      width: 18vw;
-      &--preview{
-        width: 100%;
-        height: 20vh;
-        background-color: $gray;
-      }
+    &--display{
+      width: 21%;
+      height: 95%;
+      background-color: $gray;
     }
-      input{
-        width: 100%;
-        margin: 0.5vh 0;
-      }
-      textarea{
-      width: 100%;
-      height: 20vh;
-      }
-    }
-  .submit{
-    text-align: center;
   }
+  &__inputBox{
+    width: 100%;
+    height: 55%;
+    display: flex;
+    justify-content: space-evenly;
+    input{
+      width: 100%;
+      margin: 0.5vh 0;
+    }
+    textarea{
+    width: 100%;
+    height: 20vh;
+    }
+  }
+}
+.submit{
+  text-align: center;
+}
+// ================================================
 }
