--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -62,7 +62,8 @@
       margin: 0.5vh 0;
     }
     textarea{
-    width: 100%;
+    margin-left: 2vw;
+    width: 75%;
     height: 20vh;
     }
   }
