--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -43,9 +43,10 @@
   margin-bottom: 2vh;
   &__previewBox{
     width: 100%;
-    height: 40%;
+    height: 45%;
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 2vh;
     &--display{
       width: 21%;
       height: 95%;
@@ -58,13 +59,13 @@
     display: flex;
     justify-content: space-evenly;
     input{
-      width: 100%;
-      margin: 0.5vh 0;
+      width: 75%;
+      margin: 0.5vh 0 0.5vh 3vw;
     }
     textarea{
-    margin-left: 2vw;
+    margin-left: 3vw;
     width: 75%;
-    height: 20vh;
+    height: 14vh;
     }
   }
 }
