--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -24,7 +24,6 @@
   scroll-snap-align: start;
   padding-top: 8vh;
   width: 100%;
-  // background-color: red;
   // hedding------------------------------------------------
   &__hedding{
     width: 100%;
@@ -112,11 +111,13 @@
   &__contentsBox{
     margin: 3vh auto 10vh;
     width: 80%;
-    height: 60vh;
-    filter: grayscale(100%);
+    height: 65vh;
+    filter: grayscale(90%);
     position: relative;
+    box-shadow: 0 0 5px $l_gray;
     &:hover{
-      filter:grayscale(0)
+      filter:grayscale(30%);
+      box-shadow: 0 0 10px $gray;
     }
     &__photoBlock{
       background-size: cover;
@@ -130,6 +131,9 @@
         right: 5%;
       width: 35%;
       height: 80%;
+      background-color: rgba(#ffffff , 0.9);
+      border-radius: 5%;
+      padding-left: 1vw;
       &--contentHedding{
         width: 100%;
         height: 8vh;
@@ -140,7 +144,6 @@
         width: 100%;
         height: 4vh;
         line-height: 4vh;
-        padding-left: 2vw;
         display: flex;
         justify-content: start;
         &--category{
@@ -149,10 +152,11 @@
           text-align: center;
           width: 20%;
           height: 100%;
+          color: white;
         }
       }
       &--contentText{
-        padding: 2vh 0 0 2vh;
+        padding: 2vh 1vh 0;
         width: 100%;
         height: 70%;
         font-size: 2vh;
