--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -56,13 +56,8 @@
       align-items: center;
       text-align: center;
       position: relative;
-      &--imageHeading{
-        font-weight: bold;
-        position: absolute;
-          top:5%;
-          left: 10%;
-      }
       &--image{
+        box-shadow: 0 0 5px $gray;
         background-color: lightgray;
         width: 90%;
         height: 40%;
