--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -77,6 +77,16 @@
             Other
           .skills__box__content--text
             
+        .skills__box__content
+          .skills__box__content--name
+            ruby
+          .skills__box__content--text
+
+        .skills__box__content
+          .skills__box__content--name
+            Other
+          .skills__box__content--text
+
     -# works================================================
     .works
       .works__hedding
