--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -57,13 +57,16 @@
   padding-top: 8vh;
   scroll-snap-align: start;
   width: 100%;
+  background-color: red;
   &__hedding{
+    background-color: gray;
     width: 100%;
     height: 6vh;
     font-size: 3vh;
     line-height: 6vh;
   }
   &__topText{
+    background-color: blue;
     width: 80%;
     margin: 0 auto;
     margin-bottom: 2vh;
@@ -71,10 +74,12 @@
     font-size: 2vh;
   }
   &__box{
+    background-color:green;
     margin: 5vh auto 0;
-    width: 80%;
+    width: 70%;
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
+    flex-wrap: wrap;
     align-items: center;
     &__content{
       background-color: $gray;
@@ -82,19 +87,17 @@
       border-radius: 10px;
       width: 15vh;
       height: 15vh;
-      margin: 5vh 0;
+      margin:2.5vh 2.5vh 2.5vh;
       display: flex;
       align-items: center;
       &--name{
         margin: 0 auto;
       }
-    }
-    &__content1{
-      background-color: gray;
-      color: white;
-      border-radius: 10px;
-      width: 25vh;
-      height: 25vh;
+      &:hover{
+        width: 20vh;
+        height: 20vh;
+        margin: 0;
+      }
     }
   }
 }
