--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -50,11 +50,10 @@
         %br プログラミング学習に取り組んできました。
         未経験ではありますが、現時点での "オカヤマ カナタ" のスキルです。
       .skills__box
-        -@
-        .skills__box__content
-          .skills__box__content--name
-            HTML5
-          .skills__box__content--text
+        - @categories.each do |category|
+          .skills__box__content{style:"background-color:#{category.color}"}
+            .skills__box__content--name
+              = category.name
     -# works================================================
     .works
       .works__hedding
