--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -51,7 +51,7 @@
         未経験ではありますが、現時点での "オカヤマ カナタ" のスキルです。
       .skills__box
         - @categories.each do |category|
-          .skills__box__content{style:"background-color:#{category.color}"}
+          .skills__box__content
             .skills__box__content--name
               = category.name
     -# works================================================
