--- a/app/views/contents/_form.html.haml
+++ b/app/views/contents/_form.html.haml
@@ -31,20 +31,23 @@
         = f.submit
     -else
       .top
-        = image_tag(@content.image.to_s,class:"top__left")
+        .top__left
         .top__right
-          .top__right--image
-            = f.file_field :image
           .top__right--name
+            = f.label :name, "アプリケーション名"
             = f.text_field :name ,placeholder:"アプリケーション名"
           .top__right--link
+            = f.label :link, "Wab-page"
             = f.url_field :link,placeholder:"http:..."
-          .top__right--text
-            = f.text_area :text,placeholder:"アプリケーション概要"
-      .category
-        = f.collection_check_boxes :category_ids, Category.all, :id, :name
+          .top__right--link
+            = f.label :git, "Git-hub"
+            = f.url_field :git,placeholder:"http:..."
+          .top__right--category
+            = f.label :catefory_ids, "カテゴリー選択"
+            = f.collection_check_boxes :category_ids, Category.all, :id, :name
       .infomation
         .infomation__previewBox
+          .infomation__previewBox--display
           .infomation__previewBox--display
           .infomation__previewBox--display
           .infomation__previewBox--display
@@ -55,32 +58,40 @@
               .infomation__inputBox--image
                 = i.file_field :image
               .infomation__inputBox--heading
-                = i.text_field :heading
+                = i.text_field :heading,placeholder:"画像1"
               .infomation__inputBox--text
-                = i.text_area :text
+                = i.text_area :text,placeholder:"説明1"
           = f.fields_for :infomations do |i|
             .infomation__inputBox--form
               .infomation__inputBox--image
                 = i.file_field :image
               .infomation__inputBox--heading
-                = i.text_field :heading
+                = i.text_field :heading,placeholder:"画像2"
               .infomation__inputBox--text
-                = i.text_area :text
+                = i.text_area :text,placeholder:"説明2"
           = f.fields_for :infomations do |i|
             .infomation__inputBox--form
               .infomation__inputBox--image
                 = i.file_field :image
               .infomation__inputBox--heading
-                = i.text_field :heading
+                = i.text_field :heading,placeholder:"画像3"
               .infomation__inputBox--text
-                = i.text_area :text
+                = i.text_area :text,placeholder:"説明3"
           = f.fields_for :infomations do |i|
             .infomation__inputBox--form
               .infomation__inputBox--image
                 = i.file_field :image
               .infomation__inputBox--heading
-                = i.text_field :heading
+                = i.text_field :heading,placeholder:"画像4"
               .infomation__inputBox--text
-                = i.text_area :text
+                = i.text_area :text,placeholder:"説明4"
+          = f.fields_for :infomations do |i|
+            .infomation__inputBox--form
+              .infomation__inputBox--image
+                = i.file_field :image
+              .infomation__inputBox--heading
+                = i.text_field :heading,placeholder:"画像5"
+              .infomation__inputBox--text
+                = i.text_area :text,placeholder:"説明5"
       .submit
         = f.submit
