--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -1,11 +1,11 @@
 #contentForm{
   width: 90vw;
   padding-top: 2vh;
-  margin: 0 auto;
+  margin: 1vh auto;
 // ================================================
   .top{
     background-color: $l_gray;
-    height: 37vh;
+    height: 40vh;
     padding: 2vh 0;
     display: flex;
     justify-content: space-evenly;
