change file name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "modules/contents/show";
 @import "modules/contents/form";
 // ------------------------------------------------
-@import "modules/categories/new";
+@import "modules/categories/form";
 // ------------------------------------------------
 @import "modules/profiles/index";
 // ------------------------------------------------
