--- a/app/assets/stylesheets/modules/categories/_form.scss
+++ b/app/assets/stylesheets/modules/categories/_form.scss
@@ -1,5 +1,23 @@
 #categoryForm{
+  width: 80vw;
+  height: 85vh;
+  margin: 5vh auto ;
+  background-color: $l_gray;
+  text-align: center;
 // ================================================
+.skill{
+  padding: 15% 0;
 
+  &--name{
+    height: 5vh;
+    margin-bottom: 3vh;
+  }
+  &--color{
+    input{
+      width: 10vw;
+      height: 10vw;
+    }
+  }
+}
 // ================================================
 }
