--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -51,7 +51,7 @@
         未経験ではありますが、現時点での "オカヤマ カナタ" のスキルです。
       .skills__box
         - @categories.each do |category|
-          .skills__box__content
+          =link_to(edit_category_path(category.id),class:"skills__box__content") do
             .skills__box__content--name
               = category.name
     -# works================================================
