--- a/app/assets/stylesheets/modules/categories/_form.scss
+++ b/app/assets/stylesheets/modules/categories/_form.scss
@@ -7,7 +7,6 @@
 // ================================================
 .skill{
   padding: 15% 0;
-
   &--name{
     height: 5vh;
     margin-bottom: 3vh;
@@ -18,6 +17,10 @@
       height: 10vw;
     }
   }
+}
+.deleteBtn{
+  background-color: $gray;
+  line-height: 10vh;
 }
 // ================================================
 }
