--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -17,20 +17,32 @@
     &__right{
       width: 40%;
       height: 100%;
+      &--name,&--link,&--git{
+        input{
+          width: 100%;
+          height: 4vh;
+          margin: 1vh 0;
+        }
+        textarea{
+          margin-top: 0.5vh;
+          width: 100%;
+          height: 20vh;
+        }
+      }
       &--category{
-        height: 5vh;
-        line-height: 3vh;
-        margin: 1vh 0;
-      }
-      input{
+        display: flex;
+        flex-wrap: wrap;
         width: 100%;
-        height: 4vh;
-        margin: 1vh 0;
-      }
-      textarea{
-        margin-top: 0.5vh;
-        width: 100%;
-        height: 20vh;
+        p{
+          width: 100%;
+          height: 3vh;
+        }
+        input{
+          margin:1px 2px 0 15px;
+        }
+        label{
+          height: 3vh;
+        }
       }
     }
   }
