--- a/app/assets/stylesheets/modules/contents/_form.scss
+++ b/app/assets/stylesheets/modules/contents/_form.scss
@@ -38,7 +38,9 @@
           height: 3vh;
         }
         input{
-          margin:1px 2px 0 15px;
+          margin:0 0 0 15px;
+          width: 20px;
+          height: 20px;
         }
         label{
           height: 3vh;
