--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -1,82 +1,24 @@
 #show{
-  width: 80vw;
-  margin: 0 auto;
-// top-contents================================================
-.top{
-  scroll-snap-align: start;
-  width: 100%;
   height: 100vh;
-  position: relative;
-  &--appName{
-    font-size: 35px;
-    @include position-center;
-  }
-}
-// main-content================================================
-.main{
-  scroll-snap-align: start;
-  padding-top: 8vh;
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  &__heading{
-    width: 60%;
-    height: 6vh;
-    line-height: 6vh;
-    display: flex;
-    justify-content: space-between;
-    &--left{
-      font-size: 3vh;
-      font-weight: bold;
-    }
-    &--right{
-      font-size: 2vh;
-    }
+  justify-content: space-around;
+// ================================================
+.contentBox{
+  height: 80vh;
+  width: 100vw;
+  margin-top:10vh;
+  // background-color:blue;
+  &__image{
+    display: none;
+    box-shadow: 0 0 10px $gray;
+    margin: 0 auto;
+    height: 100%;
+    width: 80%;
   }
-  &__text{
-    height: 20vh;
-    width: 50%;
-    margin-top:2vh ;
-    line-height: 4vh;
-    font-size: 2vh;
-  }
-  &__contentsWrapper{
-    width: 100%;
-    height: 55vh;
-    margin-top: 2vh ;
-    display: flex;
-    justify-content: space-around;
-    &__content{
-      width: 23%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      position: relative;
-      &--image{
-        box-shadow: 0 0 5px $gray;
-        background-color: lightgray;
-        width: 90%;
-        height: 40%;
-      }
-      &--textHeading{
-        font-weight: bold;
-        width: 100%;
-        height: 5vh;
-        line-height: 5vh;
-      }
-      &--text{
-        width: 90%;
-        height: 50%;
-        line-height: 4vh;
-        font-size: 2vh;
-      }
-    }
+  &__active{
+    display: block;
   }
 }
-
 // ================================================
 }
