--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -1,28 +1,8 @@
-#scroll
-  = render "/templates/header"
-  #show
-    -# top================================================ 
-    .top
-      .top--appName
-        = @content.name
-    -# main================================================
-    .main
-      .main__heading
-        .main__heading--left
-          = @content.name
-        .main__heading--right
-          = link_to("Link",@content.link)
-      .main__text
-      -#   = @content.infomatios
-      .main__contentsWrapper
-        - @content.infomations.each do |info|
-          = render partial: "infomation",locals: {info: info}
-  -# footer================================================
-  =link_to("アプリ編集",edit_content_path(params[:id]))
-  = render "/templates/footer"
-
-
-
-
-
+#show
+  .contentBox
+    =image_tag(@content.infomations.first.image.to_s ,class:"contentBox__image contentBox__active")
+    =image_tag(@content.infomations.second.image.to_s ,class:"contentBox__image")
+    =image_tag(@content.infomations.third.image.to_s ,class:"contentBox__image")
+    =image_tag(@content.infomations.fourth.image.to_s ,class:"contentBox__image")
+    =image_tag(@content.infomations.fifth.image.to_s ,class:"contentBox__image")
 
