--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -17,8 +17,27 @@
     height: 100%;
     width: 80%;
   }
-  &__active{
+  #active{
     display: block;
+  }
+}
+.btnWrapper{
+  margin: 0 auto;
+  width: 10vw;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &--btn{
+    width: 2vh;
+    height: 2vh;
+    border-radius: 100%;
+    background-color: $gray;
+  }
+  #selected{
+    background-color: $black;
+    width: 3.5vh;
+    height: 3.5vh;
   }
 }
 // ================================================
