--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -2,18 +2,17 @@
   .header
     .header--name
       = @content.name
-    .header__slide#back
-      back
-    .header__slide#next
-      next
+  .slide
+    =fa_icon "chevron-left next"
+    =fa_icon "chevron-right back"
   %ul.contentBox
-    %li=image_tag(@content.infomations.first.image.to_s ,class:"contentBox__image",id:"active")
+    %li=image_tag(@content.infomations.first.image.to_s ,class:"contentBox__image active")
     %li=image_tag(@content.infomations.second.image.to_s ,class:"contentBox__image")
     %li=image_tag(@content.infomations.third.image.to_s ,class:"contentBox__image")
     %li=image_tag(@content.infomations.fourth.image.to_s ,class:"contentBox__image")
     %li=image_tag(@content.infomations.fifth.image.to_s ,class:"contentBox__image")
   %ul.btnWrapper
-    %li.btnWrapper--btn#selected
+    %li.btnWrapper--btn.active
     %li.btnWrapper--btn
     %li.btnWrapper--btn
     %li.btnWrapper--btn
