--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -6,16 +6,26 @@
 .header{
   width:100%;
   height:10vh;
+  font-size: 3vh;
+  padding: 3vh 0 0 2vw;
+  // background-color: red;
 }
 // ------------------------------------------------
 .slide{
   width: 90vw;
-  font-size: 4em;
-  -webkit-text-stroke: 0.15em white;
   margin:0 auto;
   display: flex;
   justify-content: space-between;
   @include position_center;
+  i{
+    font-size: 4em;
+    color:$gray;
+    -webkit-text-stroke: 0.15em white;
+    &:hover{
+      color:$black;
+      -webkit-text-stroke: 0.1em white;
+    }
+  }
 }
 // ------------------------------------------------
 .contentBox{
@@ -48,12 +58,13 @@
     background-color: $l_gray;
     transition-duration: 0.5s;
     &:hover{
+      width: 2vh;
+      height: 2vh;
       background-color: $gray;
     }
   }
   .active{
     background-color: $black;
-    transition-duration: 0.5s;
     width: 3.5vh;
     height: 3.5vh;
   }
